--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    compile 'com.github.bumptech.glide:glide:3.6.0'//imageloader glide
-    compile 'jp.wasabeef:glide-transformations:1.0.6@aar'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'//use for recyclerview
+    implementation 'com.github.bumptech.glide:glide:3.6.0'//imageloader glide
+    implementation 'jp.wasabeef:glide-transformations:1.0.6@aar'
 
-    debugCompile 'com.amitshekhar.android:debug-db:1.0.0'//웹브라우저에서 sqlite data 보기..
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.0'//웹브라우저에서 sqlite data 보기..
 }
