recyclerView  set GridLayout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.act.ActMain">
+        <activity
+            android:name=".ui.act.ActMain"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.act.ActDetail"></activity>
-        <activity android:name=".ui.act.ActWrite"></activity>
-        <activity android:name=".ui.act.ActModify"></activity>
+        <activity
+            android:name=".ui.act.ActDetail"
+            ></activity>
+        <activity
+            android:name=".ui.act.ActWrite"
+            ></activity>
+        <activity
+            android:name=".ui.act.ActModify"
+            ></activity>
     </application>
 
 
